* Fix collapsing together with edit capabilities

--- a/Hackathon/resources/sass/app.scss
+++ b/Hackathon/resources/sass/app.scss
@@ -83,3 +83,11 @@ ul {
 .m-b-md {
   margin-bottom: 10px;
 }
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
